<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">: NUMBER + REACTOR :</string>
    <string name="action_bar_app_name">NR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_game_stats">Game Data</string>
    <string name="action_clear_database">Clear Game Data</string>
    <string name="zero_point_zero">0.00</string>
    <string name="zero">0</string>
    <string name="start">G</string>
    <string name="stop">S</string>
    <string name="target">TARGET: </string>
    <string name="fade_target">TARGET: 10</string>
    <string name="reset">RESET</string>
    <string name="accuracy">ACCURACY:</string>
    <string name="lives_remaining">LIVES: </string>
    <string name="score">SCORE: </string>
    <string name="points">POINTS: </string>
    <string name="level">LEVEL: </string>
    <string name="date">DATE: </string>
    <string name="fade_counter_dialog">Count along with the fading counter, try to stop on the target!</string>
    <string name="out_of_lives_game_over_dialog">OUT OF LIVES!</string>
    <string name="play_again_game_over_dialog">PLAY AGAIN?</string>
    <string name="exit">NO</string>
    <string name="OK">YES</string>
    <string name="prefs_title_select_difficulty">SELECT YOUR DIFFICULTY</string>
    <string name="prefs_difficulty_key">prefsDifficultyKey</string>
    <string name="prefs_difficulty_values_1">1</string>
    <string name="prefs_difficulty_values_2">2</string>
    <string name="prefs_difficulty_values_3">3</string>
    <string name="title_activity_fade_counter">FadeCounterActivity</string>
    <string name="title_activity_fading_counter">FadingCounterActivity</string>
    <string name="title_activity_fade_out_counter">FadeOutCounterActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="title_activity_view_stats">: NUMBER + REACTOR : Game Data</string>
    <string name="title_activity_settings_2">: NUMBER + REACTOR : Settings</string>
    <string name="plus_two"> +2</string>
    <string name="plus_one"> +1</string>
    <string name="minus_one"> -1</string>
    <string name="plus_sign"> +</string>
    <string name="empty_str"> </string>
    <string name="prefs_db_not_null_key">prefsDbNotNullKey</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Use the start and stop buttons to control the counter. Try to
    stop the counter as close to the target (in the upper left of screen) as possible.</string>
    <string name="good_luck">Good Luck!</string>
    <string name="begin_game">OK</string>

</resources>
