<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paceraudio.numberreactor.app.MainActivity">

    <TextView
        android:id="@+id/t_v_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="#ffbbbbff"
        android:text="@string/target"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t_v_accuracy_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_v_target"
        android:textSize="30dp"
        android:textColor="#ffbbbbff"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/t_v_counter"
        android:text="@string/zero_point_zero"
        android:textSize="200sp"
        android:typeface="normal"
        android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/t_v_accuracy_rating"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffbbbbff"
        android:layout_below="@id/t_v_counter"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/b_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:padding="5dp"
            android:layout_margin="2dp"
            android:text="@string/reset"
            android:typeface="normal"
            android:textColor="#ffffffff"
            android:textSize="30sp"
            android:background="#ff000000"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_game_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/t_v_lives_remaining"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="left"
            android:background="#ff000000"
            android:textColor="#ffbbbbff"
            android:textSize="20sp"
            android:text="@string/lives_remaining"/>

        <TextView
            android:id="@+id/t_v_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="right"
            android:background="#ff000000"
            android:textColor="#ffbbbbff"
            android:textSize="20sp"
            android:text="@string/score"/>

    </LinearLayout>





    <LinearLayout
        android:id="@+id/l_l_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/l_l_game_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:weightSum="100"
        android:background="#ffbbbbff">

        <Button
            android:id="@+id/b_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="120sp"
            android:typeface="normal"
            android:layout_weight="50"
            android:textColor="#ff44dd44"
            android:layout_margin="2dp"
            android:background="#ff000000"/>

        <Button
            android:id="@+id/b_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="120sp"
            android:typeface="normal"
            android:layout_weight="50"
            android:textColor="#ffff0000"
            android:layout_margin="2dp"
            android:background="#ff000000"/>

    </LinearLayout>






</RelativeLayout>
