<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.paceraudio.numberreactor.app.FadeOutCounterActivity">

    <TextView
        android:id="@+id/t_v_fade_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/blackRed"
        android:text="@string/fade_target"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t_v_fade_accuracy_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_v_fade_target"
        android:textSize="30dp"
        android:textColor="#ffbbbbff"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/t_v_fade_counter"
        android:text="@string/zero_point_zero"
        android:textSize="200sp"
        android:typeface="normal"
        android:textColor="@color/blackRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/t_v_fade_accuracy_rating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"/>

    <LinearLayout
        android:id="@+id/l_l_game_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/t_v_lives_remaining"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="left"
            android:background="@color/white"
            android:textColor="@color/blackRed"
            android:textSize="20sp"
            android:text="@string/lives_remaining"/>

        <TextView
            android:id="@+id/t_v_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="right"
            android:background="@color/white"
            android:textColor="@color/blackRed"
            android:textSize="20sp"
            android:text="@string/score"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_fade_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/l_l_game_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:weightSum="100"
        android:background="@color/white">

        <Button
            android:id="@+id/b_fade_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="120sp"
            android:typeface="normal"
            android:layout_weight="50"
            android:textColor="#ff44dd44"
            android:layout_margin="2dp"
            android:background="@color/blackRed"/>

        <Button
            android:id="@+id/b_fade_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="120sp"
            android:typeface="normal"
            android:layout_weight="50"
            android:textColor="#ffff0000"
            android:layout_margin="2dp"
            android:background="@color/blackRed"/>

    </LinearLayout>



</RelativeLayout>
