<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkBlackRed"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.paceraudio.numberreactor.app.MainActivity">

    <LinearLayout
        android:id="@+idl_l_fade_game_info_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@color/darkBlackRed"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/t_v_fade_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingLeft="0dp"
            android:text="@string/target"
            android:textColor="@color/red"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/t_v_fade_accuracy_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="right"
            android:text="@string/accuracy"
            android:textColor="@color/red"
            android:textSize="15sp"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/f_l_for_fade_t_v_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/@+idl_l_fade_game_info_top"
        android:layout_marginTop="50dp"
        android:background="@color/brown"
        android:padding="2dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/t_v_fade_counter"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@color/blackRed"
            android:gravity="center_horizontal"
            android:text="@string/zero_point_zero"
            android:textColor="@color/red"
            android:textSize="110sp"
            android:typeface="normal"
            />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/l_l_fade_game_info_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/darkBlackRed"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/t_v_fade_lives_remaining"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="left"
            android:text="@string/lives_remaining"
            android:textColor="@color/red"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/t_v_fade_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/score"
            android:textColor="@color/red"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/t_v_fade_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="right"
            android:text="@string/level"
            android:textColor="@color/red"
            android:textSize="15sp"
            />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame_fade_b_start"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/f_l_for_fade_t_v_counter"
        android:layout_alignTop="@+id/f_l_for_fade_b_stop"
        android:layout_marginLeft="15dp"
        android:background="@color/brown"
        android:gravity="center"
        android:padding="2dp">

        <Button
            android:id="@+id/b_fade_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkBlackRed"
            android:text="@string/start"
            android:textColor="@color/grey"
            android:textSize="45sp"
            android:typeface="normal"
            />


        ></FrameLayout>

    <FrameLayout
        android:id="@+id/f_l_for_fade_b_stop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/l_l_fade_game_info_bottom"
        android:layout_alignRight="@+id/f_l_for_fade_t_v_counter"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="15dp"
        android:background="@color/brown"
        android:gravity="center"
        android:padding="2dp">

        <Button
            android:id="@+id/fade_b_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkBlackRed"
            android:text="@string/stop"
            android:textColor="@color/grey"
            android:textSize="45sp"
            android:typeface="normal"
            />

    </FrameLayout>

</RelativeLayout>
